lazy load #markutdergi

--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -11,17 +11,17 @@
         </picture>
         </a>
 </div>
-<div id="carouselExampleIndicators" class="carousel slide mt-3 text-dark" data-ride="carousel">
+<div id="markutdergi" class="carousel slide mt-3 text-dark" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active text-dark"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+    <li data-target="#markutdergi" data-slide-to="0" class="active text-dark"></li>
+    <li data-target="#markutdergi" data-slide-to="1"></li>
+    <li data-target="#markutdergi" data-slide-to="2"></li>
+    <li data-target="#markutdergi" data-slide-to="3"></li>
+    <li data-target="#markutdergi" data-slide-to="4"></li>
+    <li data-target="#markutdergi" data-slide-to="5"></li>
+    <li data-target="#markutdergi" data-slide-to="6"></li>
+    <li data-target="#markutdergi" data-slide-to="7"></li>
+    <li data-target="#markutdergi" data-slide-to="8"></li>
   </ol>
   <div class="carousel-inner bg-grey">
 
@@ -31,7 +31,7 @@
                     <div class="row">
                 <div class="col-md-6">
                        <div class="markutcvr text-right">
-                         {{ if isset .Params "thumb"}}<a href="{{ .Permalink }}"><img loading="lazy" class="img-fluid" src="{{.Params.thumb}}" alt="Markut Sayı: {{ range .Params.sayi }}{{ . }}{{ end }} Kapak Tasarımı"></a>{{end}}
+                         {{ if isset .Params "thumb"}}<a href="{{ .Permalink }}"><img class="img-fluid" src="{{.Params.thumb}}" alt="Markut Sayı: {{ range .Params.sayi }}{{ . }}{{ end }} Kapak Tasarımı"></a>{{end}}
                                <a href="{{ .Permalink }}">{{.Content}}</a>
                        </div>
                        </div>
@@ -52,7 +52,7 @@
                     <div class="row">
                          <div class="col-md-6 ">
                          <div class="markutcvr text-right">
-                         {{ if isset .Params "thumb"}}<a href="{{ .Permalink }}"><img loading="lazy" class="img-fluid" src="{{.Params.thumb}}" alt="Markut Sayı: {{ range .Params.sayi }}{{ . }}{{ end }} Kapak Tasarımı"></a>{{end}}
+                         {{ if isset .Params "thumb"}}<a href="{{ .Permalink }}"><img class="img-fluid" src="{{.Params.thumb}}" alt="Markut Sayı: {{ range .Params.sayi }}{{ . }}{{ end }} Kapak Tasarımı"></a>{{end}}
                                <a href="{{ .Permalink }}">{{.Content}}</a>
                        </div>
                        </div>
@@ -69,11 +69,11 @@
 
   </div>
 
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#markutdergi" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#markutdergi" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
