--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -29,17 +29,17 @@
                </a>
                <div class="dropdown-menu">
                 {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.sayi" "intersect" .Params.sayi ) "Permalink" "!=" .Permalink ) }}
-             <div class="mrkt-menu"><a href="{{ .RelPermalink }}">{{.Params.sayfa}} | {{ .Title | markdownify }}</a></div>                  
+             <div class="mrkt-menu"><a href="{{.Site.BaseURL}}{{.Params.url}}">{{.Params.sayfa}} | {{ .Title | markdownify }}</a></div>                  
                {{ end }}
                </div>
              </li>
         </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/iletisim/">İletişim</a>
+              <a class="nav-link" href="{{.Site.BaseURL}}iletisim/">İletişim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/hakkimizda/">Hakkımızda</a>
+              <a class="nav-link" href="{{.Site.BaseURL}}hakkimizda/">Hakkımızda</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" data-toggle="modal" data-target="#aboneol">Abone Ol</a>
