--- a/themes/Markut/layouts/partials/header.html
+++ b/themes/Markut/layouts/partials/header.html
@@ -13,15 +13,15 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarToggle">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/bize-gonder/">Bize Gönder</a>
+              <a class="nav-link" href="{{.Site.BaseURL}}bize-gonder/">Bize Gönder</a>
             </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/hakkimizda/">Hakkımızda</a>
+                  <a class="nav-link" href="{{.Site.BaseURL}}hakkimizda/">Hakkımızda</a>
                 </li>
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/iletisim/">İletişim</a>
+              <a class="nav-link" href="{{.Site.BaseURL}}iletisim/">İletişim</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" data-toggle="modal" data-target="#aboneol">Abone Ol</a>
