arama, kapak duraklatması, reklam güncellemesi...

--- a/themes/Markut/layouts/_default/list.html
+++ b/themes/Markut/layouts/_default/list.html
@@ -4,8 +4,9 @@
     <div class="container">
     <div class="onde mb-5">
         <header class="page-header markutcontent"><h1>{{ .Title }}</h1><div class="title list-inline-item"><a href="/tags/">Etiketler Sayfasına Geri Dönün</a></div></header>
+<!--
         <div class="row mt-4">
-         {{ range first 30 .Pages }}
+         {{ range first 2 .Pages }}
          <div class="col-md-6 mt-5"><article>    
        <a href="{{ .Permalink }}"><img loading="lazy" class="img-fluid thumb" src="{{.Params.thumb}}" alt="{{ .Title | markdownify }}" width="700px" height="300px">
         <h2 class="title">{{ .Title | markdownify }}</h2>
@@ -15,5 +16,25 @@
         </article></div>
  {{ end }}
  </div>
+-->
+
+ <div class="container onde mb-5">
+  <div class="row mt-5">
+{{ $paginator := .Paginate .Pages }}
+{{ range $paginator.Pages }}
+<div class="col-md-6 mt-5"><article>    
+  <a href="{{ .Permalink }}"><img loading="lazy" class="img-fluid thumb" src="{{.Params.thumb}}" alt="{{ .Title | markdownify }}" width="700px" height="300px">
+   <h2 class="title">{{ .Title | markdownify }}</h2>
+   <p class="yazar">{{- range $index, $element := .Params.yazar }}{{- with $.Site.GetPage "taxonomyTerm" (printf "yazar/%s" (urlize .)) }}{{ if gt $index 0 }}, {{ end }}<a href="{{ .Permalink }}">{{ .Params.title }}</a>{{ end }}{{ end }} | <time>{{ index $.Site.Data.months_data.months .Date.Month }} {{ .Date.Year }}</time> | Sayı {{.Params.sayi}}</p>
+   <p class="desc">{{ .Params.aciklama | plainify | htmlUnescape }}</p>
+ </a>
+   </article></div>
+{{ end }}
 </div>
+</div>
+{{ template "_internal/pagination.html" . }}
+</div>
+
+
+{{ partial "abone-ol.html" . }}
     {{ partial "footer.html" . }}
