--- a/themes/Markut/layouts/blog/single.html
+++ b/themes/Markut/layouts/blog/single.html
@@ -18,4 +18,6 @@
             <div class="col-md-4"></div>
         </div>
     </div>
+
+    {{ partial "abone-ol.html" . }}
     {{ partial "footer.html" . }}
