--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -1,4 +1,29 @@
 <button onclick="topFunction()" id="myBtn" title="Yukarı Çık">↑</button>
+
+<div class="modal" id="arama" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content modalback">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+                  <div class="col-md-8 m-auto"></div>
+                  <div class="container markutreklam">
+                    <div class="text-center title h2">Sitede Arama Yapın</div><br>
+                    <p id="loading">Loading search data...</p>
+                    <div class="mailde">
+                    <input disabled placeholder="Sitede Arama Yap" type="text" class="form-control form-email m-auto" name="searchBox" id="searchBox" class="w-100"/>
+                    </div><div id="results"></div>
+                    <script src="/search.js"></script>
+            </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <!-- Modal Abone Ol -->
  <div class="modal" id="aboneol" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -64,57 +89,6 @@
   </div>
 </div>
 <footer><div class="container">
-  <div class="mailde mb-5">
-    <div class="mailde-title">Dergimize Abone Olun</div>
-    <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>   
-
-<p class="emailoctopus-success-message">
-</p>
-<p class="emailoctopus-error-message">
-</p>
-<form action="https://emailoctopus.com/lists/36da1349-af3b-11eb-a3d0-06b4694bee2a/members/embedded/1.3/add"
-   method="post"
-   data-message-success="Aboneliğiniz İçin Teşekkürler!"
-   data-message-missing-email-address="Mail adresini girmeniz gerekli."
-   data-message-invalid-email-address="Mail adresiniz doğru gözükmüyor. Tekrar Deneyin."
-   data-message-bot-submission-error="Bot girişi hatası. Tekrar deneyin."
-   data-message-consent-required="Please check the checkbox to indicate your consent."
-   data-message-invalid-parameters-error="Formda boş bölgeler veya hatalar var. Kontol edip tekrar deneyin."
-   data-message-unknown-error="Üzgünüz, bilinmeyen hatayla karşılaştık. Lütfen tekrar deneyin."
-   class="emailoctopus-form"
-   data-sitekey="6LdYsmsUAAAAAPXVTt-ovRsPIJ_IVhvYBBhGvRV6"
->
- <label for="field_0">
-
- <input id="field_0"
-        name="field_0"
-        type="email"
-        placeholder="Mail Adresiniz"
-        required="required"
-        class="form-control form-email"
- > </label>
-<div aria-hidden="true"
-    class="emailoctopus-form-row-hp"
->
- <input type="hidden"
-        name="hpc4b27b6e-eb38-11e9-be00-06b4694bee2a"
-        tabindex="-1"
-        autocomplete="nope"
- >
-</div>
-<div class="emailoctopus-form-row-subscribe">
- <input type="hidden"
-        name="successRedirectUrl"
- >
- <button type="submit"
-       class="btn markutbtn"
- >Abone Ol
- </button>
-</div>
-</form>
-
-    <small>ücretsizdir.</small>
-</div>
 <hr>
         <div class="footericon"><img loading="lazy" src="{{.Site.BaseURL}}img/logo-color.svg" alt="Markut Logo"></div>
         <div class="footerlogo">MARKUT</div>
