--- a/themes/Markut/layouts/partials/header.html
+++ b/themes/Markut/layouts/partials/header.html
@@ -12,16 +12,19 @@
       <!--  Use flexbox utility classes to change how the child elements are justified  -->
         <div class="collapse navbar-collapse justify-content-between" id="navbarToggle">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="{{.Site.BaseURL}}bize-gonder/">Bize Gönder</a>
-            </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{{.Site.BaseURL}}hakkimizda/">Hakkımızda</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{.Site.BaseURL}}iletisim/">İletişim</a>
+                </li>
           </ul>
           <ul class="navbar-nav">
+
             <li class="nav-item">
-              <a class="nav-link" href="{{.Site.BaseURL}}iletisim/">İletişim</a>
+              <a class="nav-link" href="#" data-toggle="modal" data-target="#arama"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 18 18">
+                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+              </svg> Arama Yap</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" data-toggle="modal" data-target="#aboneol">Abone Ol</a>
