yazar, mockup yazısı

--- a/themes/Markut/layouts/yazar/terms.html
+++ b/themes/Markut/layouts/yazar/terms.html
@@ -20,4 +20,9 @@
           </div>
 -->
           <h3>Konuk Yazarlar</h3>
+          <ul>
+             <li>
+             Michael Nicholasian | <a href="https://www.markut.net/sayi-10/abd-baskanlik-masasi-resolute-desk/" target="_blank" rel="noopener noreferrer">ABD Başkanlık Masası: Resolute Desk</a>
+             </li>
+          </ul>
     {{ partial "footer.html" . }}
