--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -90,35 +90,61 @@
 </div>
 <footer><div class="container">
 <hr>
-        <div class="footericon"><img loading="lazy" src="{{.Site.BaseURL}}img/logo-color.svg" alt="Markut Logo"></div>
-        <div class="footerlogo">MARKUT</div>
-        <div class="footersur">Marmara Kreatif Ürün Tasarım Ekibi</div>
-        <p class="footerdesc">
-        <strong>Markut</strong>, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online <strong>endüstriyel tasarım dergimizi</strong> bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında <strong>genel tasarım</strong> disiplinleriyle de ilişkili olarak içerikler üretmektedir.
-        <br><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Markut | Endüstriyel Tasarım Dergisi</span> <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons BY-NC-SA 4.0</a> ile lisanslanmıştır.
-          İçeriklerimizi başka platformlarda paylaşırken kaynak olarak <a href="https://www.markut.net">Markut.net</a> ibaresinin geçmesi gerekmektedir. Ticari olarak kullanılamaz.</p>
-          <div class="text-center"><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons Lisansı" class="text-center" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></div>
-        <ul class="list-inline footerlinks">
-            <li class="list-inline-item"><a href="{{.Site.BaseURL}}iletisim/">İletişim</a></li>| 
-            <li class="list-inline-item"><a href="{{.Site.BaseURL}}hakkimizda/">Hakkımızda</a></li>| 
-            <li class="list-inline-item"><a href="{{.Site.BaseURL}}reklam-sponsorluk/">Reklam ve Sponsorluk</a></li>| 
-            <li class="list-inline-item"><a href="{{.Site.BaseURL}}bize-gonder/">Bize Gönder</a></li>| 
-            <li class="list-inline-item"><a href="{{.Site.BaseURL}}okuyucu-sozlesmesi/">Okuyucu Sözleşmesi</a></li>| 
-            <li class="list-inline-item"><a href="{{.Site.BaseURL}}yazar/">Yazarlar</a></li>| 
-            <li class="list-inline-item"><a href="{{.Site.BaseURL}}tags/">Etiketler</a></li>| 
-            <li class="list-inline-item"><a href="{{.Site.BaseURL}}illustrasyon/">İllustrasyonlar</a></li>| 
-            <li class="list-inline-item"><div class="custom-control custom-switch m-0 ml-0 pl-2 mdarkmode">
-              <input type="checkbox" class="custom-control-input " id="darkSwitch" />
-              <label for="darkSwitch">Karanlık Mod</label>
-            </div></li>
-        </ul>
+<div class="row mb-0">
+        <div class="col-md-4"> <div class="footericon"><img loading="lazy" src="{{.Site.BaseURL}}img/logo-color.svg" alt="Markut Logo"></div>
+           <div class="footerlogo">MARKUT</div>
+           <div class="footersur">Marmara Kreatif Ürün Tasarım Ekibi</div> <p class="footerdesc">        <strong>Markut</strong>, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online <strong>endüstriyel tasarım dergimizi</strong> bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında <strong>genel tasarım</strong> disiplinleriyle de ilişkili olarak içerikler üretmektedir.</p>
+       </div>
+
+      <div class="col-md-8">
+                <div class="row mb-0 mt-md-4 mt-4">
+              <div class="col-md-4 col-sm-6 col-6 text-center mb-4">
+              <h5 class="text-muted">Bilgi</h5>
+              <hr class="m-0">
+                <ul class="list-group">
+                  <li class="list-group-item p-1"><a href="{{.Site.BaseURL}}iletisim/">İletişim</a></li>
+                  <li class="list-group-item p-1"><a href="{{.Site.BaseURL}}hakkimizda/">Hakkımızda</a></li>
+                  <li class="list-group-item p-1 font-weight-bold"><a href="{{.Site.BaseURL}}reklam-sponsorluk/">Reklam ve Sponsorluk</a></li>
+                  <li class="list-group-item p-1"><a href="{{.Site.BaseURL}}okuyucu-sozlesmesi/">Okuyucu Sözleşmesi</a></li>
+                </ul>
+             </div>
+              <div class="col-md-4 col-sm-6 col-6 text-center">    
+              <h5 class="text-muted">Linkler</h5>
+              <hr class="m-0">
+              <ul class="list-group">
+                <li class="list-group-item p-1"><a href="{{.Site.BaseURL}}yazar/">Yazarlar</a></li>
+                <li class="list-group-item p-1"><a href="{{.Site.BaseURL}}tags/">Etiketler</a></li>
+                <li class="list-group-item p-1"><a href="{{.Site.BaseURL}}illustrasyon/">İllustrasyonlar</a></li>
+                <li class="list-group-item p-1"><a href="{{.Site.BaseURL}}bize-gonder/">Bize Gönder</a></li>
+                <li class="list-group-item p-1"><div class="custom-control custom-switch m-0 ml-0 pl-0 mdarkmode">
+                  <input type="checkbox" class="custom-control-input " id="darkSwitch" />
+                  <label for="darkSwitch">Karanlık Mod</label>
+                </div></li>
+              </ul>
+              </div>
+              <div class="col-md-4 text-center">
+              <h5 class="text-muted">Sosyal Medya</h5>
+              <hr class="m-0">
+              <ul class="list-group ">
+                <li class="list-group-item p-1"><a href="https://www.instagram.com/markutworks/" target="_blank">Instagram</a></li>
+                <li class="list-group-item p-1"><a href="https://www.linkedin.com/company/markut/" target="_blank">Linkedin</a></li>
+                <li class="list-group-item p-1"><a href="https://tr.pinterest.com/markutworks/" target="_blank">Pinterest</a></li>
+                <li class="list-group-item p-1"><a href="https://markutworks.tumblr.com/" target="_blank">Tumblr</a></li>
+              </ul>
+          </div>
+             <div class="col-md-12"><p class="footerdesc mt-2">
+              <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Markut | Endüstriyel Tasarım Dergisi</span> <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons BY-NC-SA 4.0</a> ile lisanslanmıştır.
+                İçeriklerimizi başka platformlarda paylaşırken kaynak olarak <a href="https://www.markut.net">Markut.net</a> ibaresinin geçmesi gerekmektedir. Ticari olarak kullanılamaz.</p>
+                <div class="text-center mt-3"><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons Lisansı" class="text-center border-0"  src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></div>
+           </div>
+          </div>
+        </div>
+</div>
        
-        <ul class="list-inline footerlinks">
-          Sosyal Medya:
-        <li class="list-inline-item"><a href="https://www.instagram.com/markutworks/" target="_blank">Instagram</a></li>|
-        <li class="list-inline-item"><a href="https://tr.pinterest.com/markutworks/" target="_blank">Pinterest</a></li>|
-        <li class="list-inline-item"><a href="https://markutworks.tumblr.com/" target="_blank">Tumblr</a></li>
-      </ul>
+
+
+       
+
       
         <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a>  <a href="/dergi/">/dergi</a> | Copyright © 2020-2021 | Markut tarafından tasarlandı.</div>
     </div>
