--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -13,7 +13,7 @@
           <ul class="navbar-nav">
             <!-- Dropdown -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle kirmizi" href="#" data-toggle="dropdown">
+              <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown">
                Sayı {{ range .Params.sayi }}{{ . }}{{ end }}
               </a>
               <div class="dropdown-menu">
@@ -24,7 +24,7 @@
             </li>   
              <!-- Dropdown İçindekiler -->
              <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle kirmizi" href="#" data-toggle="dropdown">
+               <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown">
                  İçindekiler
                </a>
                <div class="dropdown-menu">
